--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@
 img{
     width: 100%;
 }
-
-
 /*header*/
+
 .logo{
     width: 50px;
     height: 50px;
@@ -48,6 +47,9 @@ img{
     width: 400px;
     padding-top: 2rem;
 }
+.box-text__p1{
+    color: rgb(65, 65, 65);
+}
 
 .box2{
     margin-top: 4rem;
@@ -67,7 +69,7 @@ img{
     width: 400px;
     overflow: hidden;
 }
-.box-text__p{
+.box-text__p2{
     color: rgb(65, 65, 65);
 
 }
@@ -102,7 +104,6 @@ img{
 
 @media only screen and (max-width: 425px){
     .footer{
-        width: 470px;
         margin-top: 5rem;
         height: 200px;
         clip-path: none;
@@ -116,6 +117,11 @@ img{
     }
     .list{
         width: 170px;
+    }
+}
+@media only screen and (max-width: 425px){
+    .footer{
+        width: 26.5rem;
     }
 }
 
@@ -169,12 +175,17 @@ img{
      }
      /*header*/
      .nav{
-        width: 450px;
+        width: 420px;
     }
     .section__1{
-        margin-left: 2.5rem;
-        width: 100%;
-        
+        margin-left: 3rem;
+        width: 80%;
+    }
+    .box-text__p1{
+        padding-left: 1rem;
+    }
+    .box-text__p2{
+        padding-right: 1rem;
     }
 }
 
