--- a/style.css
+++ b/style.css
@@ -4,14 +4,91 @@
 }
 img{
     width: 100%;
+    border-radius: 50%;
 }
 /*header*/
-
+.header{
+    background-color: rgb(238, 238, 238);
+    height: 60px;
+    display: flex;
+    align-items: center;
+    
+}
+.header-res{
+    display: none;
+}
 .logo{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
     margin-left: 2rem;
 }
+.list-header{
+    padding-top: 1rem;
+    display: flex;
+    list-style: none;
+    gap: 2rem;
+}
+.item1{
+    width: 130px;
+    color: rgb(31, 31, 31);
+}
+a:hover{
+    color: rgb(34, 34, 34);
+}
+a{
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(34, 34, 34);
+}
+@media only screen and (max-width: 425px){
+      .header{
+          display: none;
+      }
+      .header-res{
+          display: block;
+          background-color: rgb(238, 238, 238);
+          width: 420px;
+          height: 70px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          position: relative;
+      }
+      .list-header-res{  
+          display: none;
+      }
+      .item1-res{
+          margin-top: 1rem;
+          margin-bottom: 1rem;
+          color: rgb(42, 42, 42);
+      }
+      a{
+          text-decoration: none;
+          color: rgb(42, 42, 42);
+      }
+      .hambur{
+          margin-top: 1rem;
+          margin-right: 1rem;
+          width: 50px;
+          height: 50px;
+          background-color: #FFF;
+          list-style: none;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          border-radius: 5px;
+      }
+      .burger{
+          width: 30px;
+          position: relative;
+          left: -20px;
+          margin-top: 5px;
+          border: 3px solid rgb(75, 75, 75);
+      }
+}
+
+
 
 
 /*section__1*/
@@ -132,6 +209,7 @@ img{
     position: relative;
 }
 .wasap{
+    z-index: 5;
     bottom: 10rem;
     left: 2rem;
     position: fixed; 
@@ -198,15 +276,6 @@ img{
     margin-left: 2rem;
 }
 
-
-/*section__1*/
-
-.section__1{
-    margin: auto;
-    width: 60%;
-    margin-top: 5rem;
-    box-shadow: 5px 5px 5px 1px rgb(185, 185, 185);
-}
 
 /*section__2*/
 
@@ -283,4 +352,200 @@ img{
         width: 80%;
         margin: auto;
     }
+}
+
+
+
+@media only screen and (max-width: 770px){
+   
+}
+
+
+
+
+
+
+/*caousel*/
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+#container-slider
+{
+    margin-top: 2rem;
+    margin-left: 3.5rem;
+    position: relative;
+    display: block;
+    width: 85%;
+    margin: auto;
+    margin-top: 3rem;
+    
+}
+#slider {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100px;
+    min-height: 500px;
+}
+@media only screen and (max-width: 375px){
+    #container-slider{
+        width: 100%;
+        margin-left: 1.5rem;
+    }
+    
+}
+@media only screen and (max-width: 320px){
+    #container-slider{
+        width: 100%;
+        margin-left: 3rem;
+    }
+    
+}
+
+#slider li {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100%;
+    height: 100%;
+    display: block;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+    z-index: -1;
+    opacity: 0;
+}
+#container-slider .arrowPrev, #container-slider .arrowNext{
+    font-size: 30pt;
+    color: rgba(204, 204, 204, 0.65);
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    z-index: 2; 
+}
+#container-slider .arrowNext {
+    left: initial;
+    right: 50px !important;
+}
+.content_slider{
+    padding: 15px 30px;
+    color: #FFF;
+    width: 100%;
+    height: 100%;
+}
+.content_slider div{
+    text-align: center;
+}
+.content_slider h2{
+    font-family: 'arial';
+    font-size: 30pt;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.content_slider p {
+    font-size: 15pt;
+    font-family: 'arial';
+    color: #FFF;
+    margin-bottom: 20px;
+}
+#slider li .content_slider{
+    background: rgba(0, 0, 0, 0.50);
+    padding: 10px 125px;
+}
+.content_slider{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btnSlider{
+    color: #FFF;
+    font-size: 15pt;
+    font-family: 'arial';
+    letter-spacing: 1px;
+    padding: 10px 50px;
+    border: 1px solid #CCC;
+    background: rgba(37, 40, 80, 0.55);
+    border-radius: 31px;
+    text-decoration: none;
+    transition: .5s all;
+}
+.btnSlider:hover{
+    background: #111;
+    border: 1px solid #111;
+}
+.listslider {
+    position: absolute;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    left: 50%;
+    bottom: 5%;
+    list-style: none;
+    z-index: 2;
+    transform: translateX(-50%);
+}
+.listslider li {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+    margin: 0 5px;
+}
+.listslider li a {
+    background: #CCC;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.item-select-slid {
+    background: #FFF  !important;
+}
+
+@media screen and (max-width: 460px){
+	.content_slider h2 {
+	    font-size: 15pt !important;
+	}
+	.content_slider p {
+	    font-size: 12pt !important;
+	}
+	#container-slider .arrowPrev, #container-slider .arrowNext{
+		font-size: 20pt;
+	}
+	#container-slider .arrowPrev{
+		left: 15px;
+	}
+	#container-slider .arrowNext{
+		right: 15px !important;
+	}
+	#slider{
+		height: 400px;
+		min-height: 400px;
+	}
+	#slider li .content_slider{
+		padding: 10px 35px;
+	}
+	.btnSlider{
+		padding: 10px 30px;
+    	font-size: 10pt;
+	}
+
 }
